<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFrag"
    android:background="#bababa">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">


        <TextView
            android:id="@+id/txvAdminProdName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prodName" />

        <EditText
            android:id="@+id/edtAdminProdName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="Name" />

        <TextView
            android:id="@+id/txvAdminProdPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/prodPrice" />

        <EditText
            android:id="@+id/edtAdminProdPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="Price" />

        <TextView
            android:id="@+id/txvAdminProdDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prodDesc" />

        <EditText
            android:id="@+id/edtAdminProdDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="Description" />

        <TextView
            android:id="@+id/txvAdminProdListPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prodListPrice" />

        <EditText
            android:id="@+id/edtAdminProdListPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="List Price" />

        <TextView
            android:id="@+id/txvAdminProdRetailPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prodRetailPrice" />

        <EditText
            android:id="@+id/edtAdminProdRetailPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="Retail Price" />

        <TextView
            android:id="@+id/txvAdminProdCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prodCategory" />

        <EditText
            android:id="@+id/edtAdminProdCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="Category" />

        <Button
            android:id="@+id/btnSaveProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save" />

    </LinearLayout>



</FrameLayout>